# Isaac-GR00T

./: pyproject.toml
examples/b1k/: r1pro.json  r1pro.py
examples/i3l/: a1.json  a1.py  real_r1pro.json  real_r1pro.py
getting_started/: b1k.md
gr00t/configs/: finetune_config.py
gr00t/configs/data/: data_config.py  embodiment_configs.py
gr00t/data/: types.py
gr00t/data/dataset/: factory.py  lerobot_episode_loader.py  sharded_single_step_dataset.py
gr00t/eval/: eval_b1k_wrapper.py
gr00t/utils/: video_utils.py
scripts/b1k/: deploy_modality.py  gr00t_train.sbatch.sh  serve_b1k.py  train_b1k.py
